[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'instantiable-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.instantiable-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['instantiable-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
